# exoticas-invasoras

./: .env  .gitignore  README.md  README_miguelito.md  casting.py  docker-compose.yml  dockerfile  explain.md  figureout.ipynb  makefile  map_gdf_db.json  preprocess.py  preprocess2.py  pyproject.toml  requirements.txt  schemas.json  test.py
app2/: app.py  app2.py  db_importer.py  preprocess.py
app2/config/: schema.json
app2/src/: func.py
app_map/: map.py
app_map/pages/: page2.py
app_src/: app.py  app2.py  app_draft.py  kml_reader.py  preprocess.py
app_src/src/: func.py
avenza_config/: manejo.kml  ocorrencia.kml
database/: create_db.sql  populate.sql  query.sql
exemplo/: Ocorrencias_SC402_miguel.kml  Ocurrencia12.kml
pre-processing/: db_importer.py  figureout.ipynb  schema.json
src/: preprocessor.py
